2003-04-31 Baptiste Lepilleur <gaiacrtn@free.fr>

  * src/cppunit/DynamicLibraryManager.cpp: fixed compilation issue on Mingw
    (bug #711583)

2003-03-20 Baptiste Lepilleur <gaiacrtn@free.fr>

  * include/cppunit/extensions/TestNamer.h:
  * src/cppunit/TestNamer.cpp: Fixed bug #704684, TestNamer has non-virtual
    destructor.

2003-03-15 Baptiste Lepilleur <gaiacrtn@free.fr>

  * src/msvc6/testrunner/DynamicWindow/cdxCDynamicWndEx.cpp:
  * examples/msvc6/CppUnitTestApp/CppUnitTestApp.cpp:
  * examples/msvc6/HostApp/HostApp.cpp:
  * src/msvc6/testpluginrunner/TestPlugInRunnerApp.cpp: fixed compatibility
    issues with vc7 MFC.

  * include/cppunit/tools/Algorithm.h:
  * examples/cppunittest/XmlOutputterTest.cpp:
  * examples/cppunittest/XmlUniformiser.*:
  * src/cppunit/CompilerOutputter.cpp:
  * src/cppunit/ProtectorChain.cpp:
  * src/cppunit/StringTools.cpp:
  * src/cppunit/TestPath.cpp:
  * src/cppunit/TypeInfoHelper.cpp:
  * src/cppunit/XmlElement.cpp:
  * src/cppunit/XmlOutputter.cpp: 
  * src/DllPlugInTester/CommandLineParser.h:
  * src/msvc6/testrunner/TestRunnerDlg.cpp: switched to using unsigned index in loop to
    avoid signed/unsigned warning in vc7.

  * include/cppunit/extension/ExceptionTestCaseDecorator.h: removed dll export
    on template (caused link error on vc7).

2003-03-11 Baptiste Lepilleur <gaiacrtn@free.fr>
  * config/bb_enable_doxygen.m4:
  * doc/Makefile.am: applied Luke Dunstan's fix for bug #700730 (spaces not
    allowed in doxygen path)

  * src/cppunit/XmlElement.cpp:
  * src/examples/cppunittest/XmlUniformser.cpp: fixed bug #676505 (no space
    between attributes of XmlElement).

  * include/cppunit/tools/Algorithm.h:
  * src/cppunit/TestResult.cpp:
  * src/msvc6/testrunner/TestRunnerModel.cpp: added removeFromSequence 
    algorithm in Algorithm.h to fix STLPort compatibility issue 
	(std::remove use the one of cstdio instead of algorithm). Bug #694971.

  * src/examples/cppunittest/TrackedTestCase.cpp: